--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ POSTGRESQL_PASSWORD = '01667246580'
 
 ACCESS_SECRET_KEY = 'duykhoa247',
 REFRESH_SECRET_KEY = 'trinhduykhoa',
-ACCESS_TOKEN_EXPIRESIN = '1d'
-REFRESH_TOKEN_EXPIRESIN = '30 days'
+ACCESS_TOKEN_EXPIRESIN = '30min'
+REFRESH_TOKEN_EXPIRESIN = '1h'
 
 ITEMS_PER_PAGE = 5
 
