Update banner with 2 language (EN, VN)

--- a/.env
+++ b/.env
@@ -14,3 +14,8 @@ REFRESH_TOKEN_EXPIRESIN = '1h'
 ITEMS_PER_PAGE = 5
 
 SALT = 10
+
+MULTER_DEST = './images'
+EXTENSION_NAMES = pdf, jpg, jpeg, png
+MAX_FILE_SIZE_NAME = '10MiB'
+MAX_FILE_SIZE_VALUE = 10485760
