--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "slugify": "^1.6.6",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.16.12",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
